--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.12.2",
     "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
+    "moment": "^2.30.1",
     "ora": "^9.0.0",
     "table": "^6.9.0"
   }
